// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments Actions Comment fetchAsync 1`] = `[Function]`;

exports[`Comments Actions Comment fill 1`] = `
Object {
  "payload": Object {
    "name": "Comment",
  },
  "type": "COMMENTS_FILL",
}
`;

exports[`Comments Actions Comment setFetchingError 1`] = `
Object {
  "error": true,
  "payload": "We have a problem",
  "type": "COMMENTS_SET_FETCHING_ERROR",
}
`;

exports[`Comments Actions Comment startFetching 1`] = `
Object {
  "type": "COMMENT_START_FETCHING",
}
`;

exports[`Comments Actions Comment stopFetching 1`] = `
Object {
  "type": "COMMENTS_STOP_FETCHING",
}
`;

exports[`Comments Actions Comments fetchAsync 1`] = `[Function]`;

exports[`Comments Actions Comments fill 1`] = `
Object {
  "payload": Object {
    "name": "Comments",
  },
  "type": "COMMENTS_FILL",
}
`;

exports[`Comments Actions Comments setFetchingError 1`] = `
Object {
  "error": true,
  "payload": "We have a problem",
  "type": "COMMENTS_SET_FETCHING_ERROR",
}
`;

exports[`Comments Actions Comments startFetching 1`] = `
Object {
  "type": "COMMENTS_START_FETCHING",
}
`;

exports[`Comments Actions Comments stopFetching 1`] = `
Object {
  "type": "COMMENTS_STOP_FETCHING",
}
`;
